--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ body {
 body * {
   font-family: "Inter", sans-serif;
   color: var(--text-color);
-
 }
 
 #container {
@@ -51,16 +50,18 @@ profile p {
   background: white var(--switch-bg-url) no-repeat center;
   border-radius: 50%;
   position: absolute;
-  left: 0;
   z-index: 1;
   top: 50%;
   transform: translateY(-50%);
-  left: initial;
+  animation: slide-back 0.4s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 .light #switch button {
-  right: 0;
-  right: inicial;
+  animation: slide-in 0.4s forwards;
 }
 
 #switch span {
@@ -155,5 +156,23 @@ ul li a:hover {
 
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
